<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="24dp">

    <LinearLayout
        android:id="@+id/addAndUpdateLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/addOrEditToolBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:title="History"
            android:titleTextColor="@android:color/white" />

        <EditText
            android:id="@+id/courseNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            tools:ignore="Autofill"
            android:inputType="text"
            android:hint="@string/class_name" />

        <Spinner
            android:id="@+id/courseTypeSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/class_type" />

        <Spinner
            android:id="@+id/categorySpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/category" />

        <Spinner
            android:id="@+id/dayOfWeekSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp" />

        <LinearLayout
            android:id="@+id/timePickerRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp">

            <Button
                android:id="@+id/startTimeButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/azure"
                tools:ignore="HardcodedText"
                android:text="Select Start \n Time" />

            <Space
                android:layout_width="8dp"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/endTimeButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/azure"
                tools:ignore="HardcodedText"
                android:text="Select End \n Time" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/update_course_slider_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:orientation="vertical" />

        <EditText
            android:id="@+id/capacityEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            tools:ignore="autofill"
            android:hint="@string/total_capacity"
            android:inputType="numberSigned" />

        <!-- Dummy comment -->
        <EditText
            android:id="@+id/descriptionEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_marginTop="20dp"
            tools:ignore="autofill"
            android:hint="@string/course_description"
            android:inputType="text" />

        <Button
            android:id="@+id/buttonSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/background"
            android:text="@string/save"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonDelete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/background"
            android:text="@string/delete"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:visibility="gone"
            tools:visibility="visible" />

        <ProgressBar
            android:id="@+id/addOrEditProgressBar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:visibility="gone"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/addOrEditTestTextView"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:visibility="gone"
            android:textSize="15sp"
            tools:visibility="visible" />
    </LinearLayout>
</ScrollView>
